rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend
  namespace: backend
spec:
  selector:
    matchLabels:
      type: backend
      app: backend
      version: v1.0.0
  template:
    metadata:
      labels:
        type: backend
        app: backend
        version: v1.0.0
    spec:
      containers:
        - name: backend
          image: dlwpdnr213/gitops-test:build-ab042e4
          ports:
            - containerPort: 2000
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
  strategy:
    blueGreen:
      activeService: backend-active
      previewService: backend-preview
      autoPromotionEnabled: false
