service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-active
  namespace: backend
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: backend
    type: backend
---
apiVersion: v1
kind: Service
metadata:
  name: backend-preview
  namespace: backend
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: backend
    type: backend
